--- a/last-hearth-landing/package.json
+++ b/last-hearth-landing/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
     "angular-auth-oidc-client": "^19.0.0",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -51,6 +52,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.2",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.0.6",
     "typescript": "~5.7.2",
     "vite": "^6.1.0"
