--- a/last-hearth-landing/Dockerfile
+++ b/last-hearth-landing/Dockerfile
@@ -1,12 +1,22 @@
-#STAGE 1
-FROM node:20.15-alpine AS build
-WORKDIR /usr/src/app
-COPY package.json package-lock.json ./
-RUN npm install
-COPY . .
-RUN npm run build
+# Stage 1: Сборка приложения
+FROM node:20-alpine AS build
+WORKDIR /app
 
-#STAGE 2
-FROM nginx:1.17.1-alpine
+COPY package*.json ./
+RUN npm install -g @angular/cli@17
+RUN npm ci
+COPY . .
+RUN ng build
+
+# Stage 2: Запуск nginx
+FROM nginx:alpine@sha256:65645c7bb6a0661892a8b03b89d0743208a18dd2f3f17a54ef4b76fb8e2f2a10
+
+# Меняем конфиг nginx-а на собственный
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /usr/src/app/dist/last-hearth-landing /usr/share/nginx/html
+
+# Копируем собранное приложение из предыдущего этапа в рабочую директорию nginx
+COPY --from=build /app/dist/last-hearth-landing/browser /usr/share/nginx/html
+EXPOSE 8080
+
+# Запускаем nginx
+CMD ["nginx", "-g", "daemon off;"]
