--- a/last-hearth-landing/package.json
+++ b/last-hearth-landing/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@aws-sdk/client-s3": "^3.828.0",
+    "@aws-sdk/s3-request-presigner": "^3.828.0",
     "@logto/js": "^5.0.3",
     "@taiga-ui/addon-charts": "^4.35.0",
     "@taiga-ui/addon-commerce": "^4.35.0",
