--- a/last-hearth-landing/package.json
+++ b/last-hearth-landing/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "last-hearth-landing",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "vite",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^19.1.0",
-    "@angular/cdk": "^19.0.0",
-    "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/router": "^19.1.0",
-    "@aws-sdk/client-s3": "^3.828.0",
-    "@aws-sdk/s3-request-presigner": "^3.828.0",
-    "@logto/js": "^5.0.3",
-    "@taiga-ui/addon-charts": "^4.40.0",
-    "@taiga-ui/addon-commerce": "^4.40.0",
-    "@taiga-ui/addon-doc": "^4.40.0",
-    "@taiga-ui/addon-mobile": "^4.40.0",
-    "@taiga-ui/addon-table": "^4.40.0",
-    "@taiga-ui/cdk": "^4.40.0",
-    "@taiga-ui/core": "^4.40.0",
-    "@taiga-ui/event-plugins": "^4.6.0",
-    "@taiga-ui/icons": "^4.40.0",
-    "@taiga-ui/kit": "^4.40.0",
-    "@taiga-ui/layout": "^4.40.0",
-    "@tailwindcss/postcss": "^4.0.6",
-    "@tailwindcss/vite": "^4.0.6",
-    "angular-auth-oidc-client": "^19.0.0",
-    "jwt-decode": "^4.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.3",
-    "@angular/cli": "^19.1.3",
-    "@angular/compiler-cli": "^19.1.0",
-    "@types/jasmine": "~5.1.0",
-    "autoprefixer": "^10.4.20",
-    "jasmine-core": "~5.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.2",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4.0.6",
-    "typescript": "~5.7.2",
-    "vite": "^6.1.0"
-  }
+    "name": "last-hearth-landing",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^19.1.0",
+        "@angular/cdk": "^19.0.0",
+        "@angular/common": "^19.1.0",
+        "@angular/compiler": "^19.1.0",
+        "@angular/core": "^19.1.0",
+        "@angular/forms": "^19.1.0",
+        "@angular/platform-browser": "^19.1.0",
+        "@angular/platform-browser-dynamic": "^19.1.0",
+        "@angular/router": "^19.1.0",
+        "@aws-sdk/client-s3": "^3.828.0",
+        "@aws-sdk/s3-request-presigner": "^3.828.0",
+        "@logto/js": "^5.0.3",
+        "@taiga-ui/addon-charts": "^4.40.0",
+        "@taiga-ui/addon-commerce": "^4.40.0",
+        "@taiga-ui/addon-doc": "^4.40.0",
+        "@taiga-ui/addon-mobile": "^4.40.0",
+        "@taiga-ui/addon-table": "^4.40.0",
+        "@taiga-ui/cdk": "^4.40.0",
+        "@taiga-ui/core": "^4.40.0",
+        "@taiga-ui/event-plugins": "^4.6.0",
+        "@taiga-ui/icons": "^4.40.0",
+        "@taiga-ui/kit": "^4.40.0",
+        "@taiga-ui/layout": "^4.40.0",
+        "@tailwindcss/postcss": "^4.0.6",
+        "@tailwindcss/vite": "^4.0.6",
+        "angular-auth-oidc-client": "^19.0.0",
+        "jwt-decode": "^4.0.0",
+        "rxjs": "~7.8.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.15.0"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^19.1.3",
+        "@angular/cli": "^19.1.3",
+        "@angular/compiler-cli": "^19.1.0",
+        "@types/jasmine": "~5.1.0",
+        "autoprefixer": "^10.4.20",
+        "jasmine-core": "~5.5.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.2.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.1.0",
+        "postcss": "^8.5.2",
+        "prettier": "^3.5.3",
+        "tailwindcss": "^4.0.6",
+        "typescript": "~5.7.2",
+        "vite": "^6.1.0"
+    }
 }
