--- a/last-hearth-landing/.prettierrc
+++ b/last-hearth-landing/.prettierrc
@@ -1,17 +1,34 @@
 {
-    "printWidth": 120,
-    "htmlWhitespaceSensitivity": "css",
-    "bracketSameLine": false,
-    "htmlFormatWrapAttributes": "auto",
-    "htmlSortAttributes": "none",
-    "arrowParens": "avoid",
-    "overrides": [
-        {
-            "files": "*.html",
-            "options": {
-                "parser": "html",
-                "attributePerLine": 3
-            }
-        }
-    ]
+  "printWidth": 120,
+  "tabWidth": 4,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "quoteProps": "as-needed",
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "embeddedLanguageFormatting": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "overrides": [
+    {
+      "files": "*.html",
+      "options": {
+        "printWidth": 120,
+        "tabWidth": 4,
+        "singleQuote": false,
+        "bracketSameLine": false,
+        "htmlWhitespaceSensitivity": "ignore"
+      }
+    },
+    {
+      "files": "*.json",
+      "options": {
+        "printWidth": 120,
+        "tabWidth": 4,
+        "singleQuote": false
+      }
+    }
+  ]
 }
