--- a/last-hearth-landing/package.json
+++ b/last-hearth-landing/package.json
@@ -30,6 +30,7 @@
     "@taiga-ui/cdk": "^4.40.0",
     "@taiga-ui/core": "^4.40.0",
     "@taiga-ui/event-plugins": "^4.6.0",
+    "@taiga-ui/experimental": "^4.60.0",
     "@taiga-ui/icons": "^4.40.0",
     "@taiga-ui/kit": "^4.40.0",
     "@taiga-ui/layout": "^4.40.0",
