LH | feat: metric add

--- a/last-hearth-landing/package.json
+++ b/last-hearth-landing/package.json
@@ -40,6 +40,7 @@
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "yandex-metrika": "^0.1.2-beta",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
