LH | feat: add environment

--- a/last-hearth-landing/Dockerfile
+++ b/last-hearth-landing/Dockerfile
@@ -6,7 +6,7 @@ COPY package*.json ./
 RUN npm install -g @angular/cli@17
 RUN npm ci
 COPY . .
-RUN ng build
+RUN ng build --prod
 
 # Stage 2: Запуск nginx
 FROM nginx:alpine@sha256:65645c7bb6a0661892a8b03b89d0743208a18dd2f3f17a54ef4b76fb8e2f2a10
