--- a/last-hearth-landing/Dockerfile
+++ b/last-hearth-landing/Dockerfile
@@ -1,5 +1,4 @@
-# Stage 1: Сборка приложения
-FROM node:20-alpine AS build
+FROM node:22.21.1-alpine3.23 AS build
 WORKDIR /app
 
 COPY package*.json ./
@@ -8,15 +7,11 @@ RUN npm ci
 COPY . .
 RUN ng build --configuration production
 
-# Stage 2: Запуск nginx
 FROM nginx:alpine@sha256:65645c7bb6a0661892a8b03b89d0743208a18dd2f3f17a54ef4b76fb8e2f2a10
 
-# Меняем конфиг nginx-а на собственный
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Копируем собранное приложение из предыдущего этапа в рабочую директорию nginx
 COPY --from=build /app/dist/last-hearth-landing/browser /usr/share/nginx/html
 EXPOSE 8080
 
-# Запускаем nginx
 CMD ["nginx", "-g", "daemon off;"]
